tests/ui/ptr_in_fnptr.stderr
error: pointer argument requires that the function pointer be marked unsafe
 --> tests/ui/ptr_in_fnptr.rs:4:27
  |
1 | #[cxx::bridge]
  | -------------- in this procedural macro expansion
...
4 |         fn f(callback: fn(p: *const u8));
  |                           ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cxx::bridge` (in Nightly builds, run with -Z macro-backtrace for more info)
